@@ -1,3 +1,10 @@
+2011-01-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCtree_dec.hpp,
+	  src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Simplified allocation algorithm by requiring leafs of the tree decomposition to be empty.
+
 2011-01-22 Borut Razem <borut.razem AT gmail.com>
 
 	* src/z80/main.c(598):
